# scompiler

./: .gitignore  README.md
basic-compiler/: CMakeLists.txt  README.md
basic-compiler/Codegen/: T2P.h  main.c
basic-compiler/Lexer/: README.md  define.h  main.c  main.lex  sample.txt
basic-compiler/NFA2DFA/: CMakeLists.txt  NFAFragmentStack.c  NFAFragmentStack.h  NFAStateStack.c  NFAStateStack.h  NFAToDFA.h  PostToNFA.c  PostToNFA.h  RegexpToPost.c  RegexpToPost.h  main.c
basic-compiler/Parser/: Common.c  Common.h  EliminateLeftRecursion.c  EliminateLeftRecursion.h  FirstSet.c  FirstSet.h  FollowSet.h  PickupLeftFactor.c  PickupLeftFactor.h  README.md  SelectSet.h  TopologicalSort.h  makefile
basic-compiler/Re2NFA/: CMakeLists.txt  NFAFragmentStack.c  NFAFragmentStack.h  RegexpToNFA.h  RegexpToPost.c  RegexpToPost.h  main.c
basic-compiler/SymbolTable/: README.md  SymbolTable.c  SymbolTable.h  main.c
basic-compiler/Yacc/: README.md  sample.y  y.output  y.tab.c  y.tab.h
demo/: README.md
demo/simple_compiler/src/: AST.h  CMakeLists.txt  CompilerPlayer.cpp  Parser.h  SemanticAnalyzer.h
demo/simple_compiler/src/Transforms/MyPass/: CMakeLists.txt
demo/simple_compiler/src/Transforms/SimpleFunctionPass/: CMakeLists.txt  SimpleFunctionPass.cpp
demo/simple_compiler/src/Transforms/SimpleLoopPass/Tests/: SimpleLoopTest.c
demo/simple_compiler/src/Transforms/SimpleModulePass/: SimpleModulePass.cpp
demo/simple_lang/: CMakeLists.txt  README.md
demo/simple_lang/cmake/: AddSimpleLang.cmake
demo/simple_lang/lib/: CMakeLists.txt
demo/simple_lang/tools/: CMakeLists.txt
demo/simple_lang/tools/driver/: CMakeLists.txt
demo/simple_lexer/: CMakeLists.txt
demo/simple_lexer/src/: CMakeLists.txt  Lexer.cpp  Lexer.h  LexerPlayer.cpp
llvm-demo/simple_compiler/: CMakeLists.txt
llvm-demo/simple_compiler/src/: IRGenerator.cpp  IRGenerator.h  Lexer.h  Parser.cpp  SemanticAnalyzer.cpp
llvm-demo/simple_compiler/src/Transforms/: CMakeLists.txt
llvm-demo/simple_compiler/src/Transforms/MyPass/: MyPass.cpp
llvm-demo/simple_compiler/src/Transforms/SimpleLoopPass/: CMakeLists.txt  SimpleLoopPass.cpp
llvm-demo/simple_compiler/src/Transforms/SimpleModulePass/: CMakeLists.txt
llvm-demo/simple_jit/: Add.ll  HelloJIT.cpp
llvm-demo/simple_lang/: CMakeLists.txt  README.md
llvm-demo/simple_lang/cmake/: AddSimpleLang.cmake
llvm-demo/simple_lang/include/simplelang/Basic/: Version.h  Version.inc.in
llvm-demo/simple_lang/lib/Basic/: CMakeLists.txt  Version.cpp
llvm-demo/simple_lang/tools/driver/: Driver.cpp
